<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomePage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:text="Hello SAAD"
        android:paddingLeft="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="50sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp"
        android:text="@string/deals_msg"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:paddingTop="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="25dp"
        android:paddingStart="5dp"
        android:background="#d3d3d3"
        android:id="@+id/deal_card"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:src="@drawable/mic128"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textSize="15sp"
                android:text="@string/mic_msg"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="6dp"
                android:text="@string/mic_cost"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#ff0000"
                android:id="@+id/mic_price"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/mic_name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/mic_name"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/mic_description"
                android:textSize="12sp"
                android:id="@+id/mic_desc"
                />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:text="@string/recommendation_msg"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_marginHorizontal="15dp"
            android:id="@+id/black_card"
            >
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#d3d3d3"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/headphone_black170"
                android:padding="5dp"
                />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/headphone_cost"
                android:paddingLeft="30dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:paddingTop="5dp"
                android:id="@+id/headphone_black_cost"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/headphone_name"
                android:paddingLeft="30dp"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:id="@+id/headphone_black_name"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/model_description_black"
                android:paddingLeft="30dp"
                android:textSize="12sp"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:id="@+id/headphone_black_desc"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_marginHorizontal="15dp"
            android:id="@+id/white_card"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#d3d3d3"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/headphone_beige170"
                    android:padding="5dp"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/headphone_cost"
                android:paddingLeft="30dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:paddingTop="5dp"
                android:id="@+id/headphone_white_cost"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/headphone_name"
                android:paddingLeft="30dp"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:id="@+id/headphone_white_name"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/model_description_beige"
                android:paddingLeft="30dp"
                android:textSize="12sp"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:id="@+id/headphone_white_desc"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>