<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductDetails">

    <ImageView
        android:id="@+id/btnback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:paddingEnd="350dp" />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        android:scaleType="centerCrop"
        android:background="#d3d3d3"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/lbl_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingLeft="25dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/headphone_cost" />

    <TextView
        android:id="@+id/lbl_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/headphone_name" />

    <TextView
        android:id="@+id/lbl_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:textSize="17sp"
        android:text="@string/model_description_black" />

    <TextView
        android:id="@+id/lbl_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingTop="10dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_add_cart"
        android:backgroundTint="@color/black"
        android:textSize="20sp" />

</LinearLayout>